# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import simulateRouter from "./simulate";
+import predictionsRouter from "./predictions";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(simulateRouter);
+router.use(predictionsRouter);
 
 export default router;
